# uupgrade-web

./: .coveragerc  .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  development.ini  production.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  start.sh
uupgrade_web/: tests.py
uupgrade_web/models/: __init__.py
uupgrade_web/templates/: layout.jinja2  mytemplate.jinja2
uupgrade_web/views/: default.py
