[tool.poetry]
name = "repl_python3_beta_uupgrade-web"
version = "0.1.0"
description = ""
authors = ["ShriekDj <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "^2.0"
SQLAlchemy = "^1.4.32"
transaction = "^3.0.1"
pipenv = "^2022.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
